[package]
name = "russd"
version = "0.1.0"
authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>", "Alexandre Fourcat <alexandre.fourcat@epitech.eu>"]
edition = "2018"
license = "MIT"
description = "A new aggregator made in rust"
repository = "https://github.com/nwmqpa/russd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
notify-rust = "3.*"
webbrowser = "0.5.2"
website-icon-extract = "0.4.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
chrono = { version = "0.4.10", features = ["serde"] }
tempfile = "3.1.0"
ico = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.3.1"
serde_json = "1.0.44"
lazy_static = "1.4.0"
directories = "2.0.2"
